# reading-insights

./: .gitignore  README.md  alembic.ini  check_data.py  docker-compose.yml  env.default  env.example  pyproject.toml  test_frontend_api.html  test_token.txt  用户指南.md
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 7dab97b77eb5_添加缺失的webdav_user_encrypted字段.py  8af6b62352f2_初始化数据库表结构.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: auth.py  books.py  dashboard.py  debug.py  highlights.py  public.py  statistics.py  sync.py  (+1 more)
backend/app/models/: __init__.py  book.py  highlight.py  reading_session.py  user.py
backend/app/schemas/: __init__.py  auth.py  book.py  dashboard.py  highlight.py  sync.py  webdav.py
backend/app/services/: __init__.py  auth_service.py  book_service.py  data_sync_service.py  highlight_service.py  statistics_service.py  user_init_service.py  webdav_service.py
backend/app/tasks/: __init__.py  scheduler.py
backend/app/utils/: encryption.py
backend/tests/: conftest.py
docker/: Dockerfile.backend
frontend/: README.md  debug.html  demo.html  index.html  testuser_token.txt
frontend/js/: dashboard.js
frontend/styles/: main.css
scripts/: add_test_data.py  analyze_real_sqlite.py  check_config.py  check_db_tables.py  check_services.py  check_sync_details.py  check_test_data.py  create_test_data.py  create_test_user.py  demo_sync_workflow.py  dev.py  fix_webdav_config.py  query_real_data.py  setup.py  setup_db.sql  upload_test_data.py
